--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>hello, this is bassant</h1>
+ <h1>hello, this is bassant update</h1>
  <script src="app.js"></script>
 </body>
 </html>
